Core/web/resources/common.css
/* ... */
    
html > body .dojoxFloatingPaneTitle {
    font-weight: bold;
    background-color: #6D933E;
}
html > body .dojoxFloatingCloseIcon {
    background-image: url(../images/cross_doc.png);
    cursor: pointer;
}
html > body .dojoxFloatingPaneContent {
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 10px;
    background-color: #f0f0f0;
}
html > body .dojoxFloatingPaneContent > div {
    padding: 5px;
}
html > body .dojoxFloatingPaneContent p, #help p {
	padding: 0px;
	margin: 0px 0px 10px 0px;
}
#help h1 {
	color: #804000;
	font-size: 15px;
	font-weight: bold;
	padding: 0px;
	margin: 20px 0px 10px 0px;
}
html > body .dojoxFloatingPaneContent h1, #help h2 {
	padding: 0px;
	margin: 0px 0px 10px 0px;
	font-size: 13px;
	font-weight: bold;
}
html > body .dojoxFloatingPaneContent img, #help img {
	vertical-align: bottom;
}

/**
 * Styles for weekly 15 minute interval schedules.
 */
.qoff { background-color: #FF4000; }
.qon { background-color: #B4CE96; }
.qreg { border: 1px solid #699D2E; }
.qhlt { border: 1px solid #FF9D2E; }
.hreg { border: 1px solid #FFFFFF; }
.hhlt { border: 1px solid #FF9D2E; }

/**
 * Licenses page
 */
#moduleList { margin-left: 10px; margin-right: 25px; margin-top: 10px; }
#moduleList .module { padding: 5px 10px 10px 10px; border-top: 1px solid #E1E1DB; }
#moduleList .marked { background-color: #fdd; }
#moduleList .disabled { background-color: #fdd; }
#moduleList .deleteMark { float: right; }
#moduleList .module .name { font-size: 18px; font-weight: bold; color:#699D2E; text-decoration: none; }
#moduleList .module .name:hover { color:#804000; }
#moduleList .module .version { margin-bottom: 5px; color: #888; }
#moduleList .module .vendor { font-style: italic; margin-bottom: 5px; color: #888; }
#moduleList .module .description { margin-bottom: 5px; }
#moduleList .module .ok { font-weight: bold; }
#moduleList .module ul.errors, #moduleList .module ul.warnings { margin-top: 5px; padding-left: 0; }
#moduleList .module ul.errors li { background-image: url("../images/exclamation.png") }
#moduleList .module ul.warnings li { background-image: url("../images/warn.png") }
#moduleList .module ul.errors li, #moduleList .module ul.warnings li {
	background-position: 0 50%;
	background-repeat: no-repeat;
	padding: 2px 0 2px 20px;
	list-style-type: none;
}

.labelled-section { border: solid 1px #f07800; margin-top: 1.5em; margin-bottom: 0.5em; padding: 0 1em 0.5em 1em; }
.labelled-section > label { position: relative; top: -0.75em; left: 5px; background-color: #fff; padding: 0 10px 0 10px; font-size: 13px; color: #804000; font-weight: bold; cursor: pointer; }
.labelled-section.closed { border-left-color: #fff; border-right-color: #fff; border-bottom: none; }
.labelled-section.closed .labelled-section-inner { display: none; }

/*********
 * Other stuff
 */
.hide { display: none; }
.clearfix { clear: both; }
a.choice { cursor: pointer; }
a.choice.active { font-weight: bold; }
span.disabled { color: #aaa; }
.dijitTextBox { border-color: #F07800 !important; }

/**
 * Table attribute substitutes
 */
table { padding: 0; border-spacing: 2px; border-collapse: separate; }
table tr td, table tr th { border: 0; }
table.wide { width: 100%; }


#pointDetails { background-color: #FFF; }
#folderEditDiv { background-color: #FFF; }


/**
 * DGRID Settings
 */
 /*
 * dgrid
 */
 
 .dgrid {
    margin-top: 5px;
    margin-bottom: 5px;
}

.mangoContainer {
}
 
.mangoContainer .dgrid {
    height: 500px;
}

.expandingGrid {
    height: auto !important;
}

.expandingGrid .dgrid-scroller {
    position: relative;
    line-height: 1.5em;
    max-height: 12em;
    overflow: auto;
}

.longExpandingGrid .dgrid-scroller {
    max-height: 24em;
}
.mangoListDiv table {
    width: 100%;
}
.mangoListDiv .dgrid {
    height: auto;
}

.mangoListDiv .dgrid .dgrid-scroller {
    position: relative;
    line-height: 1.5em;
    max-height: 12em; /* 8 * 1.5em = 12em i.e. 8 rows */
    overflow: auto;
}
.dgrid-cell{
	min-width: 40px;
	text-overflow: ellipsis;
}
.dgrid-row {
    background-color: #F0F0F0;
}

.dgrid-row-odd{
	background-color: #DCDCDC;
}

.dgrid-header {
    color: #FFFFFF;
}

.greenRow {
    background-color: #CCEBCC;
}

.redRow {
    background-color: #FFCCCC;
}

.organgeRow {
    background-color: #FFE0CC;
}

.dgrid-header th {
    font-weight: bold;
     background-color: #F07800;
}

.dgrid-loading, .dgrid-no-data {
    font-weight: bold;
    text-align: center;
    color: #777;
}

div.dgridLoadNoData {
    padding-top: 10px;
}


.dgrid img.removeSelected {
    float: right;
    cursor: pointer;
    margin: 2px;
    height: 1em;
    width: 1em;
}

/* resizable attribute doesnt seem to work, set !important width to stop it */
.dgrid-column-buttons {
    width: 100px;
}

/* For extra button */
#allPointsTableDiv .dgrid-column-buttons{
	width: 120px;
}
#pointTableDiv .dgrid-column-buttons{
	width: 120px;
}

.mangoListDiv .dgrid-column-buttons {
    width: 75px !important;
}
 
 
.mangoDownloadLinks {
    float: right;
    text-align: right;
    margin-bottom: 5px;
}

/* Style for Alarms Widget */
#alarmToaster {
	
}

/*  Edit Div Properties */
/*
 * Delta form elements
 */
label.formLabelRequired, label.formLabel {
    display:block;
    float:left;
    white-space: normal;
    padding-top: 0;
}

.mangoEditDiv label.formLabelRequired,
.mangoEditDiv label.formLabel {
    width:150px;
}

.formField {
    padding-top: 0;
}

.formField > div {
    margin-bottom: 3px;
}

.mangoEditDiv .formField {
    margin-left:160px;
}

.formItem {
    clear: left;
    margin-top:5px;
}

